2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* Gui/NRefactoryResolver.cs:
	* Gui/CodeTemplateCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: Code templates are now shown in
	code  completion list, when auto insert is enabled.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 442047 - 'Go to declaration'
	missing for vars'.

2008-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Return mutable completion lists
	when appropriate. Fixes Bug 440641 - "Parsing files" message not
	shown anymore in the completion window.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.addin.xml: Bump MD version.

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* Gui/ResolveVisitor.cs:
	* Parser/NRefactoryParser.cs: fixed bug 'Bug 441671 - Finalisers show up
	in code completion'.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CompilerOptionsPanelWidget.cs: Disable CompileTarget and MainClass
	setting when project.IsLibraryBasedProjectType. Prevents messing up
	ASP.NET and Moonlight projects.

2008-11-04  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs:
	* Gui/CompilerOptionsPanelWidget.cs: Allow setting the Main class for
	libraries.

2008-11-04  Mike Krüger  <mike@icsharpcode.net>

	* Parser/CodeGenerator.cs: worked on refactoring.

2008-11-04  Mike Krüger  <mike@icsharpcode.net>

	* Parser/CodeGenerator.cs: Worked on refactoring.

2008-11-04  Mike Krüger  <mike@icsharpcode.net>

	* Parser/CodeGenerator.cs: fixed 'Bug 404906 - variable refactor -> rename freezes MD'.

2008-11-03  Mike Krüger  <mike@icsharpcode.net>

	* Parser/CodeGenerator.cs:
	* Gui/NRefactoryResolver.cs: worked on refactoring operations.

2008-11-03  Mike Krüger  <mike@icsharpcode.net>

	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 439960 - Return
	type not shown in tool tip'.

2008-10-31  Mike Krüger  <mkrueger@novell.com>
